k8s/static-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: static-dev

  namespace: student89-static-dev

  labels:

    app: static-dev

spec:

  replicas: 1

  selector:

    matchLabels:

      app: static-dev

  template:

    metadata:

      labels:

        app: static-dev

    spec:

      containers:

      - name: static-dev

        image: ghcr.io/fxxhhhhhhh/static-web:dev

        imagePullPolicy: Always

        ports:

        - containerPort: 80

          name: web-port

          protocol: TCP

        livenessProbe:

          httpGet:

            path: /

            port: 80

            scheme: HTTP

        readinessProbe:

          httpGet:

            path: /

            port: 80

            scheme: HTTP

      imagePullSecrets:

      - name: registry-github
