k8s/static-service.yaml
apiVersion: v1

kind: Service

metadata:

  name: static-dev

  namespace: student89-static-dev

spec:

  type: ClusterIP

  ports:

  - port: 80

  selector:

    app: static-dev
